# sowasm

./: Cargo.toml  LICENSE.md  README.md
demo/: index.html  package-lock.json  package.json  script.js  sowasm.d.ts  sowasm.js  sowasm_bg.wasm  sowasm_bg.wasm.d.ts  style.css  vite.config.ts
src/: guess_jsonld.rs  lib.rs  yamlld.rs
